<resources>
    <string name="app_name">Wash Squad Driver</string>
    <string name="map_api_key">AIzaSyAeyMUJgKAhnNXbILHONb1um72CNzELFRY</string>

    <string name="log_in">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="are_you_forgot_password">Forgot password ?</string>
    <string name="do_you_have_a_new_account">Do you have a new account?</string>
    <string name="create_an_account">Create a new account</string>
    <string name="user_name">Name : </string>
    <string name="phone">Phon : </string>
    <string name="you_already_have_an_account_log_in">You already have an account! log in</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
    <string name="bank_account">Bank account</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="about_app">About Tour</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="send">send</string>
    <string name="skip">skip</string>
    <string name="field_req">Field required</string>
    <string name="inv_email">Invalid email</string>
    <string name="back">Back</string>
    <string name="wait">Wait...</string>
    <string name="inv_em_ps">Invalid Email or Password</string>
    <string name="failed">Failed</string>
    <string name="something">Check internet connection</string>
    <string name="em_exist">Email or Phone number is exist</string>
    <string name="profile">Profile</string>
    <string name="general_settings">General Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="language_settings">Language Settings</string>
    <string name="sar">SAR</string>
    <string name="no_details">No details</string>
    <string name="sign_in">Sign In</string>
    <string name="please_sign_in_or_sign_up">Please Sign In or Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="suc">Success !</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_name">Account Name</string>
    <string name="account_iban">Account IBAN</string>
    <string name="account_number">Account Number</string>
    <string name="ok">OK</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="select_a_picture_to_upload">Select a Picture to Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="pass_short">Password too short</string>
    <string name="new_order">New Order</string>

    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="inv_now">Invalid now</string>
    <string name="forget_password">Forget Password</string>
    <string name="recov_msg">Recover your account.We will send you a link to change your password</string>
    <string name="enter_code">Enter code</string>
    <string name="we_ll_never_share_or_sell_your_phone_number_your_privacy_is_100_guaranteed">We\'ll never share or sell your phone number your privacy is 100% guaranteed.</string>
    <string name="enter_the_sms_verification_code_below_that_was_sent_to_your_mobile_phone">Enter the SMS verification code below that was sent to your mobile phone</string>
    <string name="inc_code_verification">Incorrect code verification</string>
    <string name="you_will_receive_4_digit">You will receive 4 digit code on your mobile</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="share">Share</string>
    <string name="order_number">Order number</string>
    <string name="city">City</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="conditions">Conditions</string>
    <string name="choose">Choose</string>
    <string name="day">Day</string>
    <string name="more2">More</string>
    <string name="inv_phone">Invalid phone</string>
    <string name="ch_city">Choose city</string>
    <string name="ch_image">Choose image</string>
    <string name="ch_bank">Choose bank</string>
    <string name="inc_phone_pas">Incorrect user name or password</string>
    <string name="ver_code_sent">Verification code is sent</string>
    <string name="order_sent_suc">Order sent successfully.the order number is</string>
    <string name="order_state">Order state</string>
    <string name="details">Order details</string>

    <string name="my_order">My order</string>
    <string name="no_orders_to_display">No Orders to display</string>
    <string name="price">Price :</string>
    <string name="no_notifications_to_display">No notifications to display</string>
    <string name="send_order">Send Order</string>
    <string name="add_comment">Add Comment</string>
    <string name="add_rate">Add Rate</string>
    <string name="offer">Offers</string>
    <string name="services">Service : </string>
    <string name="cart">Cart</string>
    <string name="no_offers_to_display">No Offers to display</string>
    <string name="no_services_to_display">No Services to display</string>
    <string name="no_items_to_display">No items to display</string>
    <string name="more_details">More Details</string>
    <string name="less_details">Less Details</string>
    <string name="location_on_map">Location on map</string>
    <string name="date">Date</string>
    <string name="time">Time  :</string>
    <string name="order_now">Order now</string>
    <string name="select_location_on_map">Select location on map</string>
    <string name="select_location">Select Location</string>
    <string name="empty_cart">Empty cart</string>
    <string name="help">Help</string>
    <string name="repeat_questions">Repeating questions</string>
    <string name="save">Save</string>
    <string name="user_name2">User name</string>
    <string name="order2">Orders</string>
    <string name="finished">Finished</string>
    <string name="canceled">Canceled</string>
    <string name="client_location">Client Location</string>
    <string name="order_details">ORDER DETIALS</string>
    <string name="number">Number : </string>
    <string name="arrival">Arrival</string>
    <string name="driver_login">Driver Login</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="reason_cancel">Reason Cancel :</string>
    <string name="custom_cancel">Custom Cancel</string>
    <string name="transformation">Transformation</string>
    <string name="issue">Issue</string>
    <string name="done">Done</string>
    <string name="ch_reson_cancel">Choose reason for cancelling order</string>
    <string name="type_car">Type Car</string>
    <string name="payment_status">Payment Status :</string>
    <string name="start_work">Start Work</string>
    <string name="add_inside_images_before_work">Add inside images before work</string>
    <string name="tire">tire</string>
    <string name="front">Front</string>
    <string name="back2">back</string>
    <string name="roof">Roof</string>
    <string name="front_seats">Front seats</string>
    <string name="back_seats">Back seats</string>
    <string name="trunk">Trunk</string>
    <string name="step_2">Step 2</string>
    <string name="write_a_feedback">Write a feedback :</string>
    <string name="add_outside_images_before_work">Add outside images before work</string>
    <string name="add_inside_images_after_work">Add inside images after work</string>
    <string name="add_outside_images_after_work">Add outside images after work</string>
    <string name="Not_Driver">Not Driver</string>
    <string name="User_Not_Active">User Not Active</string>
    <string name="image_before_work">Image Before Work</string>
    <string name="image_after">Image After Work</string>
    <string name="next">Next</string>
    <string name="piece_1">Piece 1</string>
    <string name="piece_2">Piece 2</string>
    <string name="piece_3">Piece 3</string>
    <string name="piece_4">Piece 4</string>
    <string name="add_tire_images_before_work">Add tire images before work</string>
    <string name="add_door_images_before_work">add door images before work</string>
    <string name="add_roof_images_before_work">Add roof images before work</string>
    <string name="add_tablon_images_before_work">Add tablon images before work</string>
    <string name="add_steas_images_before_work">Add steas images before work</string>
    <string name="add_glass_images_before_work">Add glass images before work</string>
    <string name="add_floor_images_before_work">Add floor images before work</string>
    <string name="add_tire_images_after_work">Add tire images After work</string>
    <string name="add_door_images_after_work">add door images After work</string>
    <string name="add_roof_images_after_work">Add roof images After work</string>
    <string name="add_tablon_images_after_work">Add tablon images After work</string>
    <string name="add_steas_images_after_work">Add steas images After work</string>
    <string name="add_glass_images_after_work">Add glass images after work</string>
    <string name="add_floor_images_after_work">Add floor images after work</string>
    <string name="finish">Finish</string>
    <string name="piece_5">piece 5</string>
    <string name="piece_6">piece 6</string>
    <string name="outside">outside</string>
    <string name="doors">doors</string>
    <string name="tablon">tablon</string>
    <string name="steas">steas</string>
    <string name="floor">floor</string>
    <string name="glass">glass</string>
    <string name="image">Image</string>
    <string name="end_time">End Time : </string>
    <string name="duration">Duration : </string>
    <string name="feedback">FeedBack</string>
    <string name="driver_app">DRIVER APP</string>
    <string name="from">From :</string>
    <string name="accept_order">ACCEPT ORDER</string>
    <string name="go">GO</string>
    <string name="arrived">ARRIVED</string>
    <string name="why_do_you_want_to_accept_this_order">WHY DO YOU WANT TO ACCEPT THIS ORDER ?</string>
    <string name="car_issue">CAR ISSUE</string>
    <string name="time_issue">TIME ISSUE</string>
    <string name="car_brands">Car Brands :</string>
    <string name="car_types">Car Types :</string>
    <string name="statistics">STATISTICS :</string>
    <string name="polishing">Polishing</string>
    <string name="wash">Wash</string>
    <string name="setrilization">Setrilization</string>
    <string name="subsriptions">Subsriptions</string>
    <string name="total_order">Total Order</string>
    <string name="commission">Commission</string>
    <string name="total_commission">Total Commission</string>
    <string name="average_reviews_customer">AVERAGE REVIEWS CUSTOMER</string>
    <string name="orders_amount">ORDERS AMOUNT</string>
    <string name="reviews">REVIEWS CUSTOMER</string>
    <string name="timer">Timer</string>
    <string name="payment_type">Payment Type</string>
    <string name="apple_pay">Apple Pay</string>
    <string name="pos">POS</string>
    <string name="cache">Cash</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_wallet_balance">My wallet balance</string>
    <string name="ch_payment">Choose Payment</string>
    <string name="payment_type2">"Payment Type : "</string>
    <string name="minute">Minute</string>

</resources>
