<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <data>

        <variable
            name="backListener"
            type="com.creative.share.apps.wash_squad_driver.interfaces.Listeners.BackListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray0"
        tools:context=".activities_fragments.activity_choose_order_type.ChooseOrderTypeActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@color/colorPrimary"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{()->backListener.back()}"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:padding="8dp"
                    android:src="@drawable/ic_arrow_left"
                    android:tint="@color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:layout_weight="1"

                    android:text="@string/payment_type"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fitsSystemWindows="true"
            android:fillViewport="true"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"
                    android:clickable="false"
                    android:longClickable="false"

                    android:text="@string/payment_type2"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RadioButton
                        android:id="@+id/rb3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:button="@drawable/rb_bg4"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/apple_pay"
                        android:textColor="@color/gray5"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/rb1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/rb_bg4"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/cache"
                        android:textColor="@color/gray5"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/rb2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/rb_bg4"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/pos"
                        android:textColor="@color/gray5"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/rb4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:button="@drawable/rb_bg4"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/my_wallet_balance"
                        android:textColor="@color/gray5"
                        android:textSize="15sp" />


                </RadioGroup>

                <Button
                    android:id="@+id/btnStep2"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/btn_send"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:text="@string/finish"
                    />
            </LinearLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
