<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <data>

        <variable
            name="backListener"
            type="com.creative.share.apps.wash_squad_driver.interfaces.Listeners.BackListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray0"
        tools:context=".activities_fragments.activity_choose_order_type.ChooseOrderTypeActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@color/colorPrimary"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->backListener.back()}"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:padding="8dp"
                    android:src="@drawable/ic_arrow_left"
                    android:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:text="@string/cancel_order"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fitsSystemWindows="true"
            android:fillViewport="true"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17sp"
                    android:text="@string/reason_cancel"
                    android:layout_marginTop="10dp"
                    />
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:orientation="vertical"
                    >
                    <RadioButton
                        android:id="@+id/rbCustom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/rb_bg"
                        android:textSize="15sp"
                        android:textColor="@color/gray5"
                        android:text="@string/custom_cancel"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        />
                    <RadioButton
                        android:id="@+id/rbTransformation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/rb_bg"
                        android:textSize="15sp"
                        android:textColor="@color/gray5"
                        android:text="@string/transformation"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_marginTop="10dp"
                        />

                    <RadioButton
                        android:id="@+id/rbIssue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/rb_bg"
                        android:textSize="15sp"
                        android:textColor="@color/gray5"
                        android:text="@string/issue"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_marginTop="10dp"
                        />
                </RadioGroup>

                <Button
                    android:id="@+id/btnDone"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="50dp"
                    android:paddingLeft="60dp"
                    android:paddingRight="60dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:background="@drawable/btn_send"
                    android:text="@string/done"
                    />
            </LinearLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
